10/31/25  added zoom, red border-rectangle, fix TEXT, RHOMBUS, icons zoom (+-).